lessons jp updated

--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -2145,8 +2145,8 @@
               以上で熟語・フレーズのレッスンは終了です。皆さんがこのレッスンで学んだフレーズを気に入ってくれたら嬉しいです♪ポーランド語のフレーズは他にもたくさんあるので、ぜひご自身でも調べてみてください(^^)
             </p>
             <div class="sign">
-              <p class="sign--person">written by</p>
-              <a href="about.html" target="_blank">@Martyna</a>
+              <p class="sign--person">作成者:</p>
+              <a href="about.html" target="_blank">@マルティナ</a>
             </div>
           </div>
           <a href="./test/unit0/" target="_blank">
@@ -2154,9 +2154,235 @@
               unit0</button>
           </a>
         </div>
+
+      <h2 class="unit">Unit 1</h2>
+      <div class="container">
+        <button class="acc lesson lesson--nominative">Mianownik / 主格</button>
+        <div class="panel">
+          <h2>Mianownik / 主格</h2>
+          <p>「主格(Mianownik)」は、ポーランド語の語形変化で一番初めにでてくるケースです。通常、ポーランド語の名詞を勉強するときに基本形としてでてくるのが、この「主格」です。難しいことはなく、簡単に覚えることができます。 <br>
+            例えば、ポーランド語で「家」は”dom“です。主格形もまた”dom“ になります。 <br>
+            「犬」は”pies“、主格形も”pies” です。 <br>
+            「サンドイッチ」は”kanapka”、主格形も”kanapka” などなど…
+          </p>
+          <p>名詞、代名詞、数詞、形容詞などを含め、ケースによって変化が起こることもありますが、今回は簡単に説明するために名詞のみに焦点を当てていきます。
+          </p>
+          <h3>では、どのような場合に主格を使うのでしょうか？</h3>
+          <p>主格は、文中の主語に使用されます。 </p>
+          <ul class="nominative">
+            <li><i><u>Pies</u> jest <span lang="pl">głodny</span>.</i> – 犬は腹ペコです。</li>
+            <li><i>Moja <u>szkoła</u> jest daleko.</i> – 私の学校は遠いです。(代名詞”moja”も主格)</li>
+            <li><i><span lang="pl">Mój</span> <u>komputer</u> nie <span lang="pl">działa</span>.</i> –  私のコンピュータは機能していない。(代名詞”mój”も主格)</li>
+            <li<i>Ten <u>telefon</u> nie jest <span lang="pl">mój</span>.</i> – この電話は私のものではない。(代名詞”ten”も主格)</li>
+              <li><i><u>Kasia</u> idzie do <span lang="pl">szkoły</span>.</i> – カーシャは学校に向かっています。</li>
+          </ul>
+          <p>主格は「これは (to jest) / あれは (to są) 」というフレーズの後に使用されます。
+          </p>
+          <ul class="nominative">
+            <li><i>To jest Kasia.</i> – これはカーシャです。 </li>
+            <li><i>To jest <span lang="pl">mój</span> dom.</i> – これはわたしの家です。</li>
+            <li><i>To jest <span lang="pl">mój</span> kolega.</i> – これは私の友達です。</li>
+            <li><i>To <span lang="pl">są</span> moi rodzice.</i> – あれは私の両親です。</li>
+            <li><i>To <span lang="pl">są</span> moi koledzy.</i> – あれは私の友達です。</li>
+          </ul>
+          <p>
+            お気付きのように、名前もケースによって変化します。自己紹介をするときには、基本形を使いましょう。
+          </p>
+          <ul class="nominative">
+            <li><i>Jestem <u>Kasia</u>.</i> –  私はカーシャです。</li>
+            <li><i>Czy ty <span lang="pl">jesteś</span> <u>Kasia</u>?</i> – あなたはカーシャですか？</li>
+            <li><i>To jest <u>Maria</u>.</i> – これはマリアです。</li>
+            <li><i>To <span lang="pl">są</span> moi przyjaciele, <u>Ania</u> i <u>Marek</u>.</i> – あれは私の友達で、アニャとマレクです。</li>
+          </ul>
+          <p>以上が、一番最初のケース「主格」です。<br><br>
+            お疲れ様でした😊 </p>
+            <div class="sign">
+              <p class="sign--person">作成者:</p>
+              <a href="about.html" target="_blank">@マルティナ</a>
+            </div>
+        </div>
+      </div>
+      <div class="container">
+        <button class="acc lesson lesson--nominative"> 数詞</button>
+        <div class="panel">
+          <h2> 数詞</h2>
+          <p>このレッスンでは、ポーランド語の数の数え方を学びます。<br>
+            ではさっそく、20までの数詞を見ていきましょう。
+          </p>
+          <ul>
+            <li>0 – zero </li>
+            <li>1 – jeden</li>
+            <li>2 – dwa</li>
+            <li>3 – trzy </li>
+            <li>4 – cztery </li>
+            <li>5 – <span lang="pl">pięć</span></li>
+            <li>6 – <span lang="pl">sześć</span></li>
+            <li>7 – siedem</li>
+            <li>8 – osiem</li>
+            <li>9 – <span lang="pl">dziewięć</span></li>
+            <li>10 – <span lang="pl">dziesięć</span></li>
+            <li>11 – <span lang="pl">jedenaście</span></li>
+            <li>12 – <span lang="pl">dwanaście</span></li>
+            <li>13 –<span lang="pl"> trzynaście</span></li>
+            <li>14 – <span lang="pl">czternaście</li>
+            <li>15 – <span lang="pl">piętnaście</span> </li>
+            <li>16 – <span lang="pl">szesnaście</span></li>
+            <li>17 – <span lang="pl">siedemnaście</span></li>
+            <li>18 – <span lang="pl">osiemnaście</span></li>
+            <li>19 – <span lang="pl">dziewiętnaście</span></li>
+            <li>20 – <span lang="pl">dwadzieścia</span></li>
+          </ul>
+          <p>見ていただいた通り、数字を形成するルールは非常に明確で規則的です。例えば「25」と言いたい場合、単純に「20」と「5」を組み合わせるだけでOKです。(「25」は”<span lang="pl">dwadzieścia pięć</span>”) .
+          </p>
+          <ul>
+            <li>21 – <span lang="pl">dwadzieścia jeden</span></li>
+            <li>22 – <span lang="pl">dwadzieścia dwa</span></li>
+            <li>23 – <span lang="pl">dwadzieścia trzy</span> </li>
+            <li>24 – <span lang="pl">dwadzieścia cztery</span></li>
+            <li>25 – <span lang="pl">dwadzieścia pięć</span></li>
+            <li>26 – <span lang="pl">dwadzieścia sześć</span></li>
+            <li>27 – <span lang="pl">dwadzieścia siedem</span></li>
+            <li>28 – <span lang="pl">dwadzieścia osiem</span></li>
+            <li>29 – <span lang="pl">dwadzieścia dziewięć</span></li>
+          </ul>
+          <ul>
+            <li>30 – <span lang="pl">trzydzieści</span></li>
+            <li>40 – <span lang="pl">czterdzieści</span></li>
+            <li>50 – <span lang="pl">pięćdziesiąt</span></li>
+            <li>60 – <span lang="pl">sześćdziesiąt</span></li>
+            <li>70 – <span lang="pl">siedemdziesiąt</span></li>
+            <li>80 – <span lang="pl">osiemdziesiąt</span> </li>
+            <li>90 – <span lang="pl">dziewięćdziesiąt</span></li>
+            <li>100 – sto </li>
+          </ul>
+          <p>100以上の数も同じく、「百の位」＋「十の位」＋「一の位」で形成することができます。
+          </p>
+          <ul><span lang="pl">
+              <li><span class="redLetter">1</span><span class="blue">2</span><span class="green">1</span> – <span
+                  class="redLetter">sto</span> <span lang="pl"><span class="blue">dwadzieścia</span> <span
+                    class="green">jeden</span></li>
+              <li><span class="redLetter">1</span><span class="blue">3</span><span class="green">6</span> – <span
+                  class="redLetter">sto</span> <span lang="pl"><span class="blue">trzydzieści</span> <span
+                    class="green">sześć</span></li>
+              <li><span class="redLetter">1</span><span class="blue">5</span><span class="green">5</span> – <span
+                  class="redLetter">sto</span> <span lang="pl"><span class="blue">pięćdziesiąt</span> <span
+                    class="green">pięć</span></li>
+              <li><span class="redLetter">1</span><span class="blue">80</span> – <span class="redLetter">sto</span>
+                <span lang="pl"><span class="blue">osiemdziesiąt</span></li>
+              <li><span class="redLetter">1</span>0<span class="green">4</span> – <span class="redLetter">sto</span>
+                <span class="green">cztery</span></li>
+              <li><span class="redLetter">1</span><span class="green">17</span> – <span class="redLetter">sto</span>
+                <span lang="pl"><span class="green">siedemnaście</span></li>
+            </span>
+          </ul>
+          <p>百の位の数詞は以下の通りです。:</p>
+          <ul>
+            <li>100 – sto</li>
+            <li>200 – <span lang="pl">dwieście</span></li>
+            <li>300 – trzysta</li>
+            <li>400 – czterysta</li>
+            <li>500 – <span lang="pl">pięćset</span></li>
+            <li>600 – <span lang="pl">sześćset</span></li>
+            <li>700 – siedemset</li>
+            <li>800 – osiemset</li>
+            <li>900 – <span lang="pl">dziewięćset</span></li>
+            </span>
+          </ul>
+          <p>続いて、千の位です。:</p>
+          <ul>
+            <li>1000 – <span lang="pl">tysiąc</span></li>
+            <li>2000 – dwa <span lang="pl">tysiące</span></li>
+            <li>3000 – trzy <span lang="pl">tysiące</span></li>
+            <li>4000 – cztery <span lang="pl">tysiące</span></li>
+            <li>5000 – <span lang="pl">pięć tysięcy</span></li>
+            <li>6000 – <span lang="pl">sześć tysięcy</span></li>
+            <li>7000 – <span lang="pl">siedem tysięcy</span></li>
+            <li>8000 – <span lang="pl">osiem tysięcy</span></li>
+            <li>9000 – <span lang="pl">dziewięć tysięcy</span></li>
+          </ul>
+          <p>
+            では、さっそく実践編です。次の数字を声に出しながら書き出してみましょう！ </p>
+          <ul>
+            <li>1 – ........................................................................</li>
+            <li>6 – ........................................................................</li>
+            <li>10 – ........................................................................</li>
+            <li>78 – ........................................................................</li>
+            <li>15 – ........................................................................</li>
+            <li>34 – ........................................................................</li>
+            <li>59 – ........................................................................</li>
+            <li>90 – ........................................................................</li>
+            <li>22 – ........................................................................</li>
+            <li>12 – ........................................................................</li>
+            <li>100 – ........................................................................</li>
+            <li>132 – ........................................................................</li>
+            <li>113 – ........................................................................</li>
+            <li>107 – ........................................................................</li>
+            <li>119 – ........................................................................</li>
+            <li>167 – ........................................................................</li>
+            <li>199 – ........................................................................</li>
+            <li>200 – .......................................................................</li>
+            <li>231 – .......................................................................</li>
+            <li>309 – .......................................................................</li>
+            <li>370 – .......................................................................</li>
+            <li>526 – .......................................................................</li>
+            <li>433 – .......................................................................</li>
+            <li>612 – .......................................................................</li>
+            <li>777 – .......................................................................</li>
+            <li>851 – .......................................................................</li>
+            <li>903 – .......................................................................</li>
+            <li>1020 – .......................................................................</li>
+            <li>1111 – .......................................................................</li>
+            <li>2020 – .......................................................................</li>
+          </ul>
+
+
+          <p>
+            正解はレッスンの最後にありますので、確認してみましょう。 <br><br>
+
+            発音に関して知りたい方は、YouTubeにたくさん動画があります！ “ counting in Polish “ で検索してみて下さい。<br> <br>
+            <b>答え:</b>
+          </p>
+          <ul>
+            <li>1 – jeden</li>
+            <li>6 – <span lang="pl">sześć</span></li>
+            <li>10 – <span lang="pl">dziesięć</span></li>
+            <li>78 – <span lang="pl">siedemdziesiąt osiem</span></li>
+            <li>15 – <span lang="pl">piętnaście</span></li>
+            <li>34 – <span lang="pl">trzydzieści cztery</span></li>
+            <li>59 – <span lang="pl">pięćdziesiąt dziewięć</span></li>
+            <li>90 – <span lang="pl">dziewięćdziesiąt</span></li>
+            <li>22 – <span lang="pl">dwadzieścia dwa</span></li>
+            <li>12 – <span lang="pl">dwanaście</span></li>
+            <li>100 – sto</li>
+            <li>132 – sto <span lang="pl">trzydzieści dwa</span></li>
+            <li>113 – sto <span lang="pl">trzynaście</span></li>
+            <li>107 – sto siedem</li>
+            <li>119 – sto <span lang="pl">dziewiętnaście</span></li>
+            <li>167 – sto <span lang="pl">sześćdziesiąt siedem</span></li>
+            <li>199 – sto <span lang="pl">dziewięćdziesiąt dziewięć</span></li>
+            <li>200 – <span lang="pl">dwieście</span></li>
+            <li>231 – <span lang="pl">dwieście trzydzieści jeden</span></li>
+            <li>309 – trzysta <span lang="pl">dziewięć</span></li>
+            <li>370 – trzysta <span lang="pl">siedemdziesiąt</span></li>
+            <li>526 – <span lang="pl">pięćset dwadzieścia</span></li>
+            <li>433 – czterysta <span lang="pl">trzydzieści trzy</span></li>
+            <li>612 – <span lang="pl">sześćset dwanaście</span></li>
+            <li>777 – siedemset <span lang="pl">siedemdziesiąt siedem</span></li>
+            <li>851 – osiemset <span lang="pl">pięćdziesiąt jeden</span></li>
+            <li>903 – <span lang="pl">dziewięćset trzy</span></li>
+            <li>1020 – <span lang="pl">tysiąc dwadzieścia</span></li>
+            <li>1111 – <span lang="pl">tysiąc sto jedenaście</span></li>
+            <li>2020 – dwa <span lang="pl">tysiące dwadzieścia</span></li>
+          </ul>
+          <div class="sign">
+            <p class="sign--person">作成者:</p>
+            <a href="about.html" target="_blank">@マルティナ</a>
+          </div>
+        </div>
       </div>
       <div class="reportButton">
         <button class="report" onclick="report()">レポート</button>
+      </div>
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
       <div id="myModal" class="modal">
