--- a/lessons.html
+++ b/lessons.html
@@ -1242,6 +1242,10 @@
               <li><i>To są moi przyjaciele, <u>Ania</u> i <u>Marek</u>.</i> – These are my friends, Ania and Marek.</li>
             </ul>
             <p>And these are the basics really. Congratulations on learning your first case! </p>
+            <div class="sign">
+              <p class="sign--person">written by</p>
+              <a href="about.html" target="_blank">@Martyna</a>
+            </div>
           </div>
         </div>
         <div class="container">
@@ -1418,6 +1422,10 @@
               <li>1111 – <span lang="pl">tysiąc sto jedenaście</span></li>
               <li>2020 – dwa <span lang="pl">tysiące dwadzieścia</span></li>
             </ul>
+            <div class="sign">
+              <p class="sign--person">written by</p>
+              <a href="about.html" target="_blank">@Martyna</a>
+            </div>
           </div>
         </div>
         <!-- <button class="accordion-4">acc lesson 3</button>
